# ark

./: .env.example  .gitignore  1.0.txt  AGENTS.md  CODE_WIKI.md  docker-compose.yml  pyrightconfig.json  test_regex.py  test_url_stream.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  app.py  dev.sh  main.py  mini_agent_integration.py  package-lock.json  pyproject.toml  test_db.py  test_default.py
backend/2ms/: .gitignore  pyproject.toml
backend/2ms/mini_agent/: __init__.py  agent.py  assets.py  config.py  logger.py
backend/2ms/tests/: test_agent.py  test_bash_tool.py  test_config_paths.py  test_integration.py  test_llm.py  test_llm_clients.py  test_logger.py  test_mcp.py  test_note_tool.py  test_publish_image_runtime.py  test_publish_image_tool.py  test_runtime_mcp_registry.py  test_server_repository.py  test_server_schemas.py  test_session_assets_route.py  test_session_integration.py  test_skill_registry.py  test_skill_tool.py  test_tools.py  (+7 more)
backend/MCP/: __init__.py  assistant_runner.py  mcp.toml  mcp_registry.py  mcp_stdio.py  mcp_types.py
backend/routes/: agent_routes.py  arxiv_routes.py  arxiv_service.py  auth_routes.py  chat_routes.py  checkin_routes.py  todo_routes.py
backend/scripts/: arxiv_selftest.py  auth_selftest.py  todo_selftest.py
backend/services/: __init__.py  arxiv_service.py  todo_service.py
backend/tests/: test_agent_routes.py  test_arxiv_lazy_generation.py  test_arxiv_routes.py  test_assistant_runner.py  test_chat_routes.py  test_checkin.py  test_checkin_routes.py  test_mini_agent_integration.py  test_todo_routes.py
(+249 files in other folders)
