[project]
name = "ark-backend"
version = "0.1.0"
description = "Ark FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "arxiv>=2.4.1",
  "asyncpg>=0.31.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pytest>=9.0.2",
  "python-dotenv>=1.0.1",
  "uvicorn[standard]>=0.30.0",
]
