[project]
name = "ark-backend"
version = "0.1.0"
description = "Ark FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "arxiv>=2.4.0",
  "asyncpg>=0.31.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pytest>=9.0.3",
  "python-multipart>=0.0.20",
  "python-dotenv>=1.0.1",
  "sse-starlette>=2.0.0",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "ruff>=0.9.0",
]

[tool.ruff]
# 设置 Python 版本
target-version = "py311"
# 排除的代码目录
exclude = [
    ".git",
    ".venv",
    "__pycache__",
]
# 行最大长度
line-length = 120

[tool.ruff.lint]
# 启用默认检查规则
select = ["E", "F", "W", "I", "N", "UP", "ASYNC"]
# 忽略特定的规则
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"MCP/__init__.py" = ["F401", "N999"]
"MCP/mcp_stdio.py" = ["ASYNC109"]
"MCP/mcp_types.py" = ["N815"]

[tool.ruff.format]
# 格式化选项
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
